2006-11-18  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Check that the libkernel.la is present.
	* bootstrap: Make safer.
	* urbi-engine.ac: Check that the libkernel.la exists in $(kerneldir)
          since it's a frequent error to forget that the --prefix must point
          to where the kernel was installed.
	* urbi-sdk.m4: param.mk is now provided by an svn:external.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a workaround so that the BuildFarm can compile uengine-pc.
	* urbi-engine.ac: Here.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Make valgrind errors non-fatal by default.
	* test.sh.in: Here.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix valgrind/libtool issues.
	* test.sh.in: Here.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add valgrind support.
	* test.sh.in: Here. See the "built in" documentation.

2006-11-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a macro to check Qt's version.
	* autotroll.m4 (AT_REQUIRE_QT_VERSION): New.

2006-11-16  Akim Demaille  <akim.demaille@free.fr>

	Improve check.mk
	* check.mk: Simplify the reporting.
	Use $(subdir).
	* reindent: Try to remove some useless parens.
	* rename: New.
	Not very safe, yet useful.

2006-11-16  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Remove spurious warnings from aclocal.
	* qscintilla2.m4: Use quadrigraphs to remove spurious warnings:
	aclocal:build-aux/qscintilla2.m4:53: warning: macro `AM_CPPFLAGS' not
	found in library
	aclocal:build-aux/qscintilla2.m4:56: warning: macro `AM_CXXFLAGS' not
	found in library

2006-11-16  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Properly handle Windows' CRLF.
	When we're on Windows, the output of the programs are first filtered
	so that any \r at end of line is removed.

	The script is also named test.sh.in so that you can list it in
	AC_CONFIG_FILES which allows you to run ./some.test directly (see the